Generate id fixed

--- a/Server/CMakeLists.txt
+++ b/Server/CMakeLists.txt
@@ -1,13 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
-project(P2P C)               # Create project "simple_example"
-set(CMAKE_C_STANDARD 99)
+project(ContactTracing)
+set(CMAKE_CXX_STANDARD 11)
 
-
-# Add main.cpp file of project root directory as source file
-set(SOURCE_FILES main.c server.c server.h)
+add_executable(P2P_server main.c server.c server.h)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread")
-
-include_directories(.)
-
-# Add executable target with source files listed in SOURCE_FILES variable
-add_executable(P2P ${SOURCE_FILES})
