--- a/Peer/CMakeLists.txt
+++ b/Peer/CMakeLists.txt
@@ -1,13 +1,9 @@
-cmake_minimum_required(VERSION 3.20)
-project(P2P C)               # Create project "simple_example"
-set(CMAKE_C_STANDARD 99)
-
+cmake_minimum_required(VERSION 3.13)  # CMake version check
+project(simple_example)               # Create project "simple_example"
+set(CMAKE_CXX_STANDARD 14)            # Enable c++14 standard
 
 # Add main.cpp file of project root directory as source file
-set(SOURCE_FILES main.c peer.c peer.h header.h ds_peer.c ds_peer.h)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread")
-
-include_directories(.)
+set(SOURCE_FILES main.c peer.c peer.h ds_peer.c ds_peer.h)
 
 # Add executable target with source files listed in SOURCE_FILES variable
-add_executable(P2P ${SOURCE_FILES})
+add_executable(simple_example ${SOURCE_FILES})
